--- a/3tvdemo/src/App.css
+++ b/3tvdemo/src/App.css
@@ -1,52 +1,48 @@
 
-.slideshow {
-  margin: 0 auto;
+
+.newSlideshow{
+  position: relative;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
+  background: black;
+}
+
+.newSlide, .video-container{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 99vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 1.5s ease-in-out, z-index 0.5s;
+  opacity: 0;
+  z-index: 0;
+}
+
+.video-container video{
   max-width: 100%;
+  height: 100vh;
+  
 }
 
-.slideshowSlider {
-  white-space: nowrap;
-  transition: ease 1000ms;
+
+.newSlide.active, .video-container.visible{
+  opacity: 1;
+  z-index: 1;
 }
 
-.slide {
-  margin-top: 20vh;
-  display: inline-block;
-  height: 400px;
+.newSlide img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 
-.slideVideo {
-  display: inline-block;
-  height: 600px;
-  width: 100%;
-}
-
-.animated1 {
-  margin-top: 20vh;
-  display: inline-block;
-  height: 400px;
-  width: 100%;
-  border-radius: 40px;
-  animation: 3s linear 1s infinite running slidein;
-}
-.animated2 {
-  margin-top: 20vh;
-  display: inline-block;
-  height: 400px;
-  width: 100%;
-  border-radius: 40px;
-  animation: 3s linear 1s infinite running slidein;
-
-}
-.animated3 {
-  margin-top: 20vh;
-  display: inline-block;
-  height: 400px;
-  width: 100%;
-
+.hidden img, .hidden video {
+  pointer-events: none;
 }
 
 
