--- a/3tvdemo/src/App.css
+++ b/3tvdemo/src/App.css
@@ -45,6 +45,21 @@
   pointer-events: none;
 }
 
+#videoPlayer {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
 
+html, body { 
+  width: 100%; 
+  height: 100%; 
+  overflow: hidden; 
+  margin: 0; 
+  padding: 0; 
+}
 
 
